--- a/item2-builder/pom.xml
+++ b/item2-builder/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>item2-builder</artifactId>
+    <artifactId>science.mengxin.java.effective.item2-builder</artifactId>
 
 
 </project>
